# claude-secure-boot

./: .gitignore  Cargo.toml  memory.x  rust-toolchain.toml
.cargo/: config.toml
examples/: basic_boot.rs  flash_test.rs
src/: defmt.rs  lib.rs  main.rs
src/bootloader/: core.rs  flash.rs  mod.rs  timeout.rs  verification.rs
src/communication/: can.rs  mod.rs  serial.rs
src/drivers/: clock.rs  gpio.rs  mod.rs  power.rs  watchdog.rs
src/hal/: mod.rs
src/hal/common/: cortex_m.rs  mod.rs
src/hal/s32k148/: mod.rs  peripherals.rs  registers.rs
src/protocol/: mod.rs  xcp.rs
src/protocol/uds/: mod.rs  security.rs  services.rs  session.rs  transfer.rs
